<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtLabelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_price_dialog_filter"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radioBtnPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLabelPrice"
        android:text="@string/txt_free"
        android:paddingStart="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>
    <!--android:layout_alignParentStart="true"-->
    <!--android:layoutDirection="rtl"-->
    <View
        android:id="@+id/line_price"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/radioBtnPrice"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/txtLabelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line_price"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_category_dialog_filter"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"/>
    <RadioGroup
        android:id="@+id/radioGroupCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtLabelCategory"
        android:inputType="text"
        android:orientation="vertical"
        android:layout_marginEnd="10dp"/>
        <!--&gt;-->
        <!--<RadioButton-->
            <!--android:id="@+id/most_visited"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="4dp"-->
            <!--android:layoutDirection="rtl"-->
            <!--android:textAlignment="textStart"-->
            <!--android:layout_gravity="start"-->
            <!--android:text="@string/category_name_one"-->
            <!--android:textSize="16sp"-->
            <!--android:paddingStart="20dp"/>-->
        <!--<RadioButton-->
            <!--android:id="@+id/best_selling"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="4dp"-->
            <!--android:layoutDirection="rtl"-->
            <!--android:textAlignment="textStart"-->
            <!--android:layout_gravity="start"-->
            <!--android:text="@string/category_name_two"-->
            <!--android:textSize="16sp"-->
            <!--android:paddingStart="20dp"/>-->
        <!--<RadioButton-->
            <!--android:id="@+id/newest"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="4dp"-->
            <!--android:layoutDirection="rtl"-->
            <!--android:textAlignment="textStart"-->
            <!--android:layout_gravity="start"-->
            <!--android:text="@string/category_name_three"-->
            <!--android:textSize="16sp"-->
            <!--android:paddingStart="20dp" />-->
        <!--<RadioButton-->
            <!--android:id="@+id/Low_to_high"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="4dp"-->
            <!--android:layoutDirection="rtl"-->
            <!--android:textAlignment="textStart"-->
            <!--android:layout_gravity="start"-->
            <!--android:text="@string/category_name_four"-->
            <!--android:textSize="16sp"-->
            <!--android:paddingStart="20dp"/>-->
    <!--</RadioGroup>-->
    <View
        android:id="@+id/line_category"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/radioGroupCategory"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:id="@+id/txtLabelDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line_category"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/label_duration_dialog_filter"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/radioGroupDuration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLabelDuration"
        android:inputType="text"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        >
        <RadioButton
            android:id="@+id/first_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/first_period__dialog_filter"
            android:textSize="16sp"
            android:paddingStart="20dp"/>
        <RadioButton
            android:id="@+id/two_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/two_period__dialog_filter"
            android:textSize="16sp"
            android:paddingStart="20dp"/>
        <RadioButton
            android:id="@+id/three_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/three_period__dialog_filter"
            android:textSize="16sp"
            android:paddingStart="20dp"/>
        <RadioButton
            android:id="@+id/four_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/four_period__dialog_filter"
            android:textSize="16sp"
            android:paddingStart="20dp" />
        <!--android:layoutDirection="rtl"-->
        <!--android:textAlignment="textStart"-->
        <!--android:layout_gravity="start"-->
    </RadioGroup>
    <View
        android:id="@+id/line_duration"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/radioGroupDuration"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@id/line_duration"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp">
        <com.andexert.library.RippleView
            android:id="@+id/rippleViewFav"
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:padding="10dp">
    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_apply_dialog_filter"
        android:background="@drawable/background_button"
        android:textColor="#fff"
        android:textAllCaps="false"
        />
        </com.andexert.library.RippleView>
        <com.andexert.library.RippleView
            android:id="@+id/rippleViewFdav"
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            android:padding="10dp">
    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_dialog_filter"
        android:background="@drawable/background_button"
        android:textColor="#fff"
        android:textAllCaps="false"/>
        </com.andexert.library.RippleView>
    </LinearLayout>

</RelativeLayout>